Sun Apr 13 13:16:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.h (RCS_CO): Removed; no longer used.

Sun Apr 13 00:04:34 1997  Ian Lance Taylor  <ian@cygnus.com>

	Expand RCS keywords internally; never call co:
	* rcs.h (struct rcsversnode): Add state field.
	* rcs.c (kflags): Move out of RCS_check_kflag, and make file
	static.
	(enum kflag): Define.
	(RCS_reparsercsfile): Always save lock information.  Save state in
	new state field, rather than other field.
	(struct rcs_keyword): Define.
	(keywords): New static variable.
	(enum keyword): Define.
	(printable_date, escape_keyword_value): New static functions.
	(expand_keywords): New static function.
	(RCS_checkout): Call expand_keywords.  Don't call
	RCS_exec_checkout.
	(RCS_deltas): Add log and loglen parameters.  Change all callers.
	* log.c (log_version_requested): Use new state field.
	(log_version): Likewise.
	* cvs.h (RCS_exec_checkout): Don't declare.
	* rcscmds.c (RCS_exec_checkout): Remove.

Sat Apr 12 17:32:59 1997  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh (modules3): Remove second-dir at end of tests.
	(sticky): Correct removal of directories at end of tests.

	* sanity.sh (keyword): New tests for RCS keyword expansion.

Sat Apr 12 16:47:13 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb): New tests basicb-1b, basicb-1c, basicb-9b,
	basic-9c test current build_dirs_and_chdir behavior.

Fri Apr 11 23:54:56 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modules3): New tests modules3-7* test for ability to
	supply a path in -d in modules.  Similar to modules3-8 through
	modules3-11 except because the nesting is different, these ones
	work.

Thu Apr 10 00:14:47 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (modules3): New tests modules3-12 through modules3-15
	test use of a module name which contains a slash.

	* sanity.sh (basicb): New tests basicb-14 to basicb-20 test use of
	co -d with two or more arguments.
