@@ -4118,11 +4118,8 @@ done'
 	  # Try the same thing, but with the directories nested even
 	  # deeper (deeply enough so they are nested more deeply than
 	  # the number of directories from / to ${TESTDIR}).
-	  if false; then
-	  # This one fails with a SIGSEGV.  Based on looking at the
-	  # CVS/Repository files that modules3-8 creates locally, it would
-	  # seem that the same underlying bug is responsible for this and
-	  # the remote failures in modules3-8.
+	  if test "x$remote" = xno; then
+	  # I assume this will be like modules3-8 for remote
 	  mkdir 1
 	  cd 1
 	  dotest modules3-10 "${testcvs} -q co nestdeeper" \
@@ -4130,7 +4127,7 @@ done'
 	  dotest modules3-11 "test -f src/sub1/sub2/sub3/dir/file1" ''
 	  cd ..
 	  rm -r 1
-	  fi # matches "if false".
+	  fi # end of tests bypassed for remote
 
 	  # This one is almost too twisted for words.  The pathname output
 	  # in the message from "co" doesn't include the "path/in/modules",
